[package]
name    = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum       = "0.7.5"
axum-client-ip = "0.6.0"
base64 = "0.22.1"
rsa = "0.9.6"
rusqlite = "0.31.0"
tokio      = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
